fixed contact alignments + shop target + general styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ footer p {
 	object-fit: cover;
 	position: absolute;
 	top: 0;
-	height: 60vh;
+	height: 650px;
 }
 
 #contact-body #navCollapse {
@@ -266,7 +266,7 @@ footer p {
 }
 
 #contact-section {
-	height: 500px!important;
+	height: 600px!important;
 }
 
 #contact-text {
@@ -297,7 +297,7 @@ footer p {
 }
 
 form {
-	background-color: rgba(22, 22, 67, 0.36);
+	background-color: rgb(0, 0, 0);
 	padding: 0 6vw;
 	border-style: solid;
 	border-radius: 5px;
@@ -589,13 +589,13 @@ input[type=submit] {
 		height: 500px;
 	}
 	#above-form-text h1 {
-		top: 100px;
+		top: 130px;
 		left: 0;
 		font-size: 50px;
 		letter-spacing: 0px;
 	}
 	#above-form-text p {
-		top: 120px;
+		top: 150px;
 		font-size: 15px;
 		letter-spacing: 5px;
 	}
